Impl. resource manager with caching + response send logic

--- a/Sources/HttpServer/src/httpserver.config
+++ b/Sources/HttpServer/src/httpserver.config
@@ -1,2 +1,4 @@
 SERVER_PORT=8082
 ROOT_FOLDER ="d:\\Projects\\Test\\Java\\HttpServer\\wwwroot\\"
+CACHE_VALIDATION_INTERVAL_SEC = 30
+CACHE_EXP_INTERVAL_SEC = 60
